# cli-toolkit

./: .gitlab-ci.yml  Makefile  README.md  pyproject.toml  setup.cfg  setup.py  tox.ini
cli_toolkit/: __init__.py  base.py  command.py  configuration.py  encoders.py  exceptions.py  fixtures.py  logger.py  path.py  platform.py  process.py  script.py  task.py  textfile.py
cli_toolkit/tests/: __init__.py  packaging.py  script.py
demo/: README.md  setup.cfg  setup.py
demo/cli_toolkit_demo/: __init__.py  configuration.py
demo/tests/: __init__.py  conftest.py  test_configuration.py  test_version.py
demo/tests/cli_demo/: __init__.py  test_cli_config.py  test_cli_demo_init.py
docs/: conf.py  index.rst
docs/configuration/: formats.rst  index.rst  section.rst
docs/examples/: simple_script.py  simple_script_subcommand.py
docs/logger/: default.rst  file.rst  http.rst  index.rst  syslog.rst
docs/process/: index.rst
docs/scripts/: command.rst  examples.rst  index.rst  script.rst
requirements/: developer.txt
tests/: __init__.py  conftest.py  test_base.py  test_configuration_ini.py  test_configuration_json.py  test_configuration_sections.py  test_configuration_yml.py  test_encoders.py  test_logger.py  test_mock_fixtures.py  test_nested_subcommand.py  test_path_executables.py  test_platform.py  test_process_run.py  test_script.py  test_script_tasks.py  test_subcommand.py  test_textfile_parsers.py  test_version.py
tests/data/: linefile  linefile_mixed_encodings  linefile_sorted
tests/data/configuration/: test_empty.ini  test_invalid.ini  test_invalid.yml  test_valid.ini  test_valid.json  test_valid.yml
