[tool.poetry]
name = "cli-toolkit"
version = "2.2.2"
description = "Classes to implement CLI commands in python"
authors = ["Ilkka Tuohela <hile@iki.fi>"]
license = "PSF"
classifiers = [
    'Environment :: Console',
    'Intended Audience :: Developers',
    'Intended Audience :: System Administrators',
    'License :: OSI Approved :: Python Software Foundation License',
    'Operating System :: POSIX',
    'Operating System :: MacOS :: MacOS X',
    'Programming Language :: Python :: 3',
    'Topic :: System',
]

[tool.poetry.dependencies]
python = "^3.9"
sys-toolkit = "^2.2.1"

[tool.poetry.dev-dependencies]
coverage = "^6.1"
flake8 = "^5.0"
flake8-quotes = "^3.3"
pycodestyle = "^2.8"
pyflakes = "^2.4"
pylint = "^2.14"
pytest = "^7.1"
tox = "^3"

[tool.poetry.plugins.pytest11]
cli_toolkit_fixtures = 'cli_toolkit.fixtures'

[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"
