[metadata]
description-file = README.md

[tox:tox]
envlist = py39

[testenv]
deps =
    -r requirements/test.txt
commands =
    unittest: coverage run --source cli_toolkit --module py.test
    unittest: coverage html
    unittest: coverage report

    lint: flake8
    lint: pycodestyle setup.py cli_toolkit tests
    lint: pylint setup.py cli_toolkit tests

[pycodestyle]
max-line-length = 120
statistics = True

[tool:pytest]
addopts = --verbose --ignore demo

[flake8]
max-line-length = 120
exclude =
    .git,
    .eggs,
    .tox,
    __pycache__,
    docs/source/conf.py,
    build,
    dist
