[metadata]
description-file = README.md

[tox:tox]
envlist = py39

[testenv]
deps =
    -r ../requirements/test.txt
    -e ..
commands =
    unittest: coverage run --source cli_toolkit_demo --module py.test
    unittest: coverage html
    unittest: coverage report

    lint: flake8
    lint: pycodestyle setup.py cli_toolkit_demo tests
    lint: pylint setup.py cli_toolkit_demo tests

[pycodestyle]
max-line-length = 120
statistics = True

[tool:pytest]
addopts = --verbose

[flake8]
max-line-length = 120
exclude =
    .git,
    .eggs,
    .tox,
    __pycache__,
    docs/source/conf.py,
    build,
    dist
